 cnp-allow-only-default-elastic-ports-oan78oi.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-allow-only-default-elastic-ports-ugfbih2
  namespace: default
spec:
  description: "To block all ports except 9200 and 9300 in elastic pod"
  endpointSelector:
    matchLabels:
      controller-revision-hash: elasticsearch-master-78777c797c
      release: elasticsearch
      statefulset.kubernetes.io/pod-name: elasticsearch-master-0
      app: elasticsearch-master
      chart: elasticsearch
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "9200"     #change port values to match your ports
        - ports:
            - port: "9300"
